# itch-io-rs

./: Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: CI.yml  Rust.yml  Rustdoc.yml  rust.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
itch_io/: all.html  enum.Error.html  enum.Platform.html  index.html  sidebar-items.js  struct.Client.html  struct.DownloadInfo.html  struct.DownloadPage.html  struct.DownloadPageUrlInfo.html  struct.GamePage.html  struct.PurchaseDialog.html
itch_io/client/: struct.Client.html
itch_io/types/: enum.Platform.html  struct.DownloadInfo.html  struct.DownloadPageUrlInfo.html
itch_io/types/download_page/: struct.DownloadPage.html
itch_io/types/game_page/: struct.GamePage.html
itch_io/types/purchase_dialog/: struct.PurchaseDialog.html
src/: client.rs  lib.rs  main.rs  types.rs
src/itch_io/: client.rs.html  lib.rs.html  types.rs.html
src/itch_io/types/: download_page.rs.html  game_page.rs.html  purchase_dialog.rs.html
src/types/: download_page.rs  game_page.rs  purchase_dialog.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
