[package]
name = "itch-io"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "itch-io"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.11.25", default-features = false, features = [ "json", "cookies" ] }
scraper = { version = "0.19.0", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = [ "rt" ] }
url = { version = "2.5.0", features = [ "serde" ] }

# Optional
anyhow = { version = "1.0.80", optional = true }
argh = { version = "0.1.12", optional = true }
itoa = { version = "1.0.10", optional = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = [ "macros" ] }

[features]
default = [
    "rustls-tls",
]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [
    "anyhow",
    "argh",
    "itoa",
    "tokio/rt-multi-thread",
]
