[package]
name = "itch-io"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "itch-io"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.12.4", default-features = false, features = [ "json", "cookies" ] }
scraper = { version = "0.19.0", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = [ "rt" ] }
url = { version = "2.5.1", features = [ "serde" ] }

# Optional
anyhow = { version = "1.0.86", optional = true }
argh = { version = "0.1.12", optional = true }
itoa = { version = "1.0.11", optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = [ "macros" ] }

[features]
default = [
    "rustls-tls",
]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [
    "anyhow",
    "argh",
    "itoa",
    "tokio/rt-multi-thread",
]
